cmake_minimum_required(VERSION 3.30)
project(C___Projects___Exercises)

set(CMAKE_CXX_STANDARD 20)

add_executable(C___Projects___Exercises main.cpp
        "Exercise 1 - Fundamentals/Q1.cpp"
        "Exercise 1 - Fundamentals/Q2.cpp"
        "Exercise 1 - Fundamentals/Q3.cpp"
        "Exercise 1 - Fundamentals/Method_use.cpp")
